--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^0.13.0+1
   flutter_signin_button: ^1.0.0
   google_sign_in: ^3.2.4
+  sign_button: ^1.0.2
 
 dev_dependencies:
   flutter_test:
